--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -37,6 +37,6 @@ jobs:
         ./IBM_Cloud_CLI/ibmcloud cf install -v 6.51.0
       env:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
-      run: |
+      run: 
         ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME"
 
